blog/infra/k8s/posts-depl.yml
apiVersion: apps/v1
kind: Deployment

#&dockerHubId: surgesoro
metadata:
  name: posts-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          image: surgesoro/msn-posts:latest
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: posts-srv
spec:
  type: ClusterIP #this is optional, if not specified k8s will create ClusterIP by default
  selector:
    app: posts
  ports:
    - name: posts
      protocol: TCP
      port: 8080
      targetPort: 8080
