blog/infra/k8s/posts-nodeport-srv.yaml
#no longer needed since we created a Cluster IP service
#for development purpose only to connect for post directly
apiVersion: v1
kind: Service
metadata:
  name: posts-nodeport-srv
spec:
  type: NodePort
  selector:
    app: posts
  ports:
    - name: posts
      protocol: TCP
      port: 8080
      targetPort: 8080
