blog/infra/k8s/query-depl.yml
apiVersion: apps/v1
kind: Deployment

#&dockerHubId: surgesoro
metadata:
  name: query-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: surgesoro/msn-query:latest
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
  type: ClusterIP #this is optional, if not specified k8s will create ClusterIP by default
  selector:
    app: query
  ports:
    - name: query
      protocol: TCP
      port: 8082
      targetPort: 8082
